2010-5-27 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.09-06
   * R/mi.binary: n.iter = 25 when start is supplied.
   * R/mi.count: 
        1. draw.from.beta = FALSE, to ensure comupational stability
        2. start = NULL, to ensure comupational stability
   * R/mi.preprocess: new coding.
   * R/mi:
        1. add mi.preprocessed method.
        2. add mi.default
        3. separate mi.preprocess out of mi.
   * R/AllClass: add mi.preprocessed class.
   
   
2010-5-17 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.09-05
   * R/mi: now thin the mcmc object if the n.iter > 30

2010-5-5 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.09-04
   * R/plot: binned.plot, default color set to be blue.
   * R/mi.scatterplot: add 45 degree line
    
2010-4-5 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mp.plot: add a clustered option, mp.plot now is able to cluster data 
        according to its missing pattern

2010-4-3 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-08
   * R/mi.info: add missing.index slot
   * R/plot.im: mi.scatterplot, take out alpha paramter
   * R/mi: new mi process, the missing of the outcome is imputed with observed value to start with


2010-3-31 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mi.info: update.mi.info: fix the formula to get rid of excluded variables

2010-3-23 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-07
   * R/mi.info: coerce data into numeric to pass the new rule of cor()
   * R/mi.polr: fix a formula bug.

2010-2-23 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mi: 
      1. clean up code.
      2. rewrite mi() to burnin iterations with noises.
      3. move post.run control into noise.control() as post.run.iters.
   * R/mi.misc: more internal functions for mi() are stored here.
   * R/AllGeneric: rewrite converged and bugs.mi generic functions.

2009-12-31 Yu-Sung Su     <ys463@columbia.edu> 