@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.09-11.02
-Date: 2010-10-25
+Version: 0.09-11.03
+Date: 2010-11-10
 Title: Missing Data Imputation and Model Checking
 Author:
   Andrew Gelman <gelman@stat.columbia.edu>,
